# whatsappx

./: .gitignore  README.md  mix.exs
lib/: r_crypto.ex  whatsapp_flow_crypto.ex  whatsappx.ex
lib/whatsapp_elixir/: buttons.ex  crypt.py  flow.ex  http.ex  media.ex  mediadownloader.ex  message.ex  messages.ex  others.ex  static.ex  templates.ex
native/rcrypto/: Cargo.toml
native/rcrypto/src/: lib.rs
test/: whatsappx_test.exs
